--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,1 @@
-body{padding:0;margin:0;font-family:Roboto,Arial,sans-serif;font-size:16px}
+body{padding:0;margin:32px;font-family:Roboto,Arial,sans-serif;font-size:16px}.puzzle,.setup{padding:16px;margin-bottom:32px}.puzzle h2,.setup h2{margin:0}.setup{border:1px solid #ccc;background-color:#eee}.puzzle{border:1px solid red;background-color:#ffdbd6}.puzzle.solved{border:1px solid green;background-color:#ccffda}.name{font-weight:700}
