--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,19 @@
 body {
-  padding: 0;
-  margin: 0;
+  padding: 32px;
+  margin: 32px;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
+}
+section.parent {
+
+   border: 1px solid #ccc;
+  background-color: #eee;
+  padding: 10px;
+}
+
+section.child {
+
+  border: 1px solid black;
+  background-color: #ccc;
+  padding: 10px;
 }
