--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,1 @@
-body{padding:0;margin:0;font-family:Roboto,Arial,sans-serif;font-size:16px}
+body{padding:32px;margin:32px;font-family:Roboto,Arial,sans-serif;font-size:16px}section.parent{border:1px solid #ccc;background-color:#eee;padding:10px}section.child{border:1px solid #000;background-color:#ccc;padding:10px}
