--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,34 @@
 body {
-  padding: 0;
-  margin: 0;
+  padding: 32px;
+  margin: 32px;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
+}
+
+.container {
+
+  padding: 16px;
+  border: 1px solid #ccc;
+  background: #eee;
+  margin-bottom: 32px;
+}
+
+button {
+  paddig: 4px 8px;
+  border: 1px solid #ccc;
+  background-color: white;
+  border-radius: 3px;
+  cursor: default;
+}
+
+button:not([disabled] ) {
+  cursor: ponter;
+}
+
+button:not([disabled]):hover {
+    background-color: salmon;
+    color: white;
+}
+.highlight {
+  font-weight: bold;
 }
